trunk/Archive2/3c/566e5ca3e334bc/output
main.cpp:9:11: error: type 'double' cannot be narrowed to 'int' in initializer list [-Wc++11-narrowing]
    t = { x1 + x2 } ; // **** error: implicit narrowing conversion
          ^~~~~~~
main.cpp:9:11: note: insert an explicit cast to silence this issue
    t = { x1 + x2 } ; // **** error: implicit narrowing conversion
          ^~~~~~~
          static_cast<int>( )
1 error generated.
