trunk/Archive2/3c/566e5ca3e334bc/main.cpp
#include <iostream>

int main()
{
    double x1 = 0, x2 = 0 ;
    
    int t = { int( x1 + x2 ) } ; // fine
    
    t = { x1 + x2 } ; // **** error: implicit narrowing conversion
    
    return t ;
}
